--- a/index.css
+++ b/index.css
@@ -29,9 +29,11 @@ body{
     padding-left: 10rem;
 }
 #dispNee{
-    text-align: center;
-    margin-top: 64px;
-    margin-left: 500px;
+    display: flex;
+   justify-content: center;
+   max-width: 600px;
+   margin: auto;
+    margin-top: 4rem;
 }
 /** footer **/
 .container{
